--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -92,7 +92,7 @@ const socialImageURL = new URL(
     <ViewTransitions />
 
   </head>
-  <body class="bg-yellow-50">
+  <body class="bg-yellow-50" tabindex={-1}>
     <slot />
   </body>
 </html>
