--- a/src/layouts/ShellPage.astro
+++ b/src/layouts/ShellPage.astro
@@ -13,7 +13,7 @@ const { currentPath: current, command }: Props = Astro.props;
 
 <Base>
     <div
-        class="max-w-screen-md mx-auto p-8 font-mono text-lg"
+        class="max-w-screen-md mx-auto p-8 text-lg"
         style="line-height: 1.5rem;"
     >
         <div id="init-history">
