--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -1,4 +1,5 @@
 ---
+import { Header } from "@components/Header";
 import { SITE } from "@config";
 import "@styles/global.css";
 import { ViewTransitions } from "astro:transitions";
@@ -90,9 +91,11 @@ const socialImageURL = new URL(
     <meta name="theme-color" content="" />
 
     <ViewTransitions />
-
   </head>
-  <body class="bg-yellow-50" tabindex={-1}>
-    <slot />
+  <body class="bg-yellow-50 font-mono" tabindex={-1}>
+    <Header />
+    <main>
+      <slot />
+    </main>
   </body>
 </html>
