--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -93,9 +93,10 @@ const socialImageURL = new URL(
     <ViewTransitions />
   </head>
   <body class="bg-yellow-50 font-mono" tabindex={-1}>
-    <Header />
+    <Header client:idle />
     <main>
       <slot />
     </main>
+    <script src="@scripts/contentButton.ts"></script>
   </body>
 </html>
