--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -92,7 +92,7 @@ const socialImageURL = new URL(
 
     <ViewTransitions />
   </head>
-  <body class="bg-yellow-50 font-mono" tabindex={-1}>
+  <body class="bg-yellow-50 text-slate-900 dark:bg-black dark:text-white font-mono" tabindex={-1}>
     <Header client:idle />
     <main>
       <slot />
