--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,6 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+    :root {
+        --color-bg: #fefce8;
+        --color-fg: black;
+    }
+
+    @media (prefers-color-scheme: dark) {
+        :root {
+            --color-bg: black;
+            --color-fg: white;
+        }
+    }
+}
+
 button.btn-primary {
     @apply px-4 py-1 bg-yellow-700 text-white transition-colors;
 }
