fix: article max width.

--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -62,7 +62,7 @@ const metaDate =
             </button>
         </div>
 
-        <article role="article" class="prose dark:prose-invert prose-lg">
+        <article role="article" class="prose dark:prose-invert prose-lg max-w-screen-md">
             <Content />
         </article>
     </div>
