refactor: uniform dark and light mode colors.

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -90,7 +90,7 @@ const socialImageURL = new URL(
 
     <meta name="theme-color" content="" />
   </head>
-  <body class="bg-yellow-50 text-slate-900 dark:bg-black dark:text-white font-mono" tabindex={-1}>
+  <body class="bg-term-bg text-term-normal font-mono" tabindex={-1}>
     <Header client:idle />
     <main>
       <slot />
