--- a/src/components/ListTable/index.module.css
+++ b/src/components/ListTable/index.module.css
@@ -8,7 +8,7 @@
     content: "";
     display: table-row;
     height: 1rem;
-    @apply border-t-2 border-black dark:border-white border-dashed;
+    @apply border-t-2 border-term-normal border-dashed;
 }
 
 /* hide first col in mobile */
@@ -18,7 +18,7 @@
 }
 
 .posts-list a {
-    @apply text-blue-700 dark:text-blue-300 underline;
+    @apply text-term-blue underline;
 }
 
 .posts-list .mobile-a {
