--- a/src/components/ShellPrompt/index.module.css
+++ b/src/components/ShellPrompt/index.module.css
@@ -15,5 +15,5 @@
 .cursor {
     animation: blink 1s step-end infinite;
     height: 24px;
-    @apply bg-black dark:bg-white align-top inline-block w-3 absolute;
+    @apply bg-term-normal align-top inline-block w-3 absolute;
 }
