--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -1,11 +1,16 @@
 nav.main-nav {
-    @apply self-end text-lg font-bold pb-4;
+    @apply self-center text-lg font-bold;
 }
 
 nav.main-nav ul {
     @apply mt-4 sm:mt-0 sm:flex sm:gap-8;
 }
 
+nav.main-nav ul li {
+    @apply sm:mb-0 mb-4;
+}
+
 nav.main-nav a {
-    @apply relative after:bg-black after:absolute after:h-0.5 after:w-0 after:bottom-0 after:left-0 hover:after:w-full after:transition-all after:duration-300 cursor-pointer;
+    @apply relative after:bg-term-normal after:absolute after:h-0.5 after:w-0 after:bottom-0 after:left-0 hover:after:w-full after:transition-all after:duration-300 cursor-pointer;
+    @apply active:text-term-blue;
 }
