fix: some bugs.

--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -72,10 +72,10 @@ const metaDate =
         </dl>
 
         <div class="my-4 flex gap-4 flex-wrap text-sm">
-            <button class="btn-primary toolbar-button" data-command="less">
+            <button class="btn-primary hidden-in-less" data-command="less">
                 Pipe to less (C-h)
             </button>
-            <button class="btn-primary toolbar-button" data-command="copylink" data-link={file.absPath}>
+            <button class="btn-primary hidden-in-less" data-command="copylink" data-link={file.absPath}>
                 Copy link
             </button>
         </div>
