--- a/src/components/ListTable/index.module.css
+++ b/src/components/ListTable/index.module.css
@@ -11,6 +11,12 @@
     @apply border-t-2 border-term-normal border-dashed;
 }
 
+.posts-list th,
+.posts-list td {
+    vertical-align: top;
+    text-align: left;
+}
+
 /* hide first col in mobile */
 .posts-list td:first-child,
 .posts-list th:first-child {
