feat: font cdn.

--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -80,15 +80,8 @@ const socialImageURL = new URL(
     <meta property="twitter:image" content={socialImageURL} />
 
     <!-- Google Font -->
-    <!-- TODO: font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://cdn.bootcdn.net/ajax/libs/firacode/6.2.0/fira_code.css" rel="stylesheet">
 
-    <meta name="theme-color" content="" />
   </head>
   <body class="bg-term-bg text-term-normal font-mono" tabindex={-1}>
     <Header client:idle />
