feat: css lazy load.

--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -65,7 +65,7 @@ if (post.data.heroImage) {
             )
         }
 
-        <h1 class="text-5xl font-bold flex-1">
+        <h1 class="text-4xl font-bold flex-1">
             {post.data.title}
         </h1>
         <!-- article meta -->
@@ -108,7 +108,8 @@ if (post.data.heroImage) {
             </button>
         </div>
 
-        <article role="article" class="prose prose-gray dark:prose-invert prose-lg max-w-screen-md prose-h1:text-4xl">
+        <article role="article" class="prose prose-neutral dark:prose-invert prose-lg max-w-screen-md
+            prose-h1:text-3xl prose-h2:text-2xl prose-h3:text-xl">
             <Content />
         </article>
     </div>
