--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -79,8 +79,12 @@ const socialImageURL = new URL(
     <meta property="twitter:description" content={description} />
     <meta property="twitter:image" content={socialImageURL} />
 
-    <!-- Google Font -->
-    <link href="https://cdn.bootcdn.net/ajax/libs/firacode/6.2.0/fira_code.css" rel="stylesheet">
+    <!-- font from CDN, lazy load -->
+    <link rel="preload" href="https://cdn.bootcdn.net/ajax/libs/firacode/6.2.0/fira_code.css"
+      as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+      <link rel="stylesheet" href="https://cdn.bootcdn.net/ajax/libs/firacode/6.2.0/fira_code.css">
+    </noscript>
 
   </head>
   <body class="bg-term-bg text-term-normal font-mono" tabindex={-1}>
