--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -87,7 +87,7 @@ const socialImageURL = new URL(
     </noscript>
 
   </head>
-  <body class="bg-term-bg text-term-normal font-mono" tabindex={-1}>
+  <body class="bg-term-bg text-term-normal font-mono min-h-screen" tabindex={-1}>
     <Header client:idle />
     <main>
       <slot />
